<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="help_me">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="share_app_title">Поделиться приложением</string>
    <string name="recipientEt">mailto:angelina_zykova@mail.ru</string>
    <string name="agree">https://yandex.ru/legal/practicum_offer/</string>
    <string name="appID">com.Practicum.PlaylistMaker</string>
    <string name="supportTitle">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supportText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="sharing">Посмотри, какой интересный курс - https://practicum.yandex.ru/android-developer/</string>
    <string name="name_song">Название песни</string>
    <string name="artist">Исполнитель</string>
    <string name="update">Обновить</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="error">Enter How Much Cookies You Want</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="you_search">Вы искали</string>
    <string name="time">0:00</string>
    <string name="button_new_playlist">Новый плейлист</string>
    <string name="empty_fav">Ваша медиатека пуста</string>
    <string name="table_favorite_song_text">Избранные треки</string>
    <string name="table_playlist_text">Плейлисты</string>
    <string name="empty_playlist">Вы не создали\n\ни одного плейлиста</string>
    <string name="clear_history">Очистить историю</string>
    <string name="new_playlist_text">Новый плейлист</string>
    <string name="no_conection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_playlist_photo">Шаблон для фото</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="image_playlist">Картинка для плейлиста</string>
    <string name="finish_creating">Завершить создание плейлиста?</string>
    <string name="all_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="photo_pick">PhotoPicker</string>
    <string name="no_media_selected">No media selected</string>
    <string name="need_permission">Для загрузки фото требуется разрешение</string>
    <string name="Newalbum">myalbum</string>
    <string name="no_tracks_in_playlist">В плейлисте нет треков</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="delete_playlist">"Хотите удалить плейлист "</string>
    <string name="no_tracks">0 минут</string>
    <string name="no_songs">0 треков</string>
    <string name="save">Сохранить</string>
    <string name="playlistname">PlaylistName</string>
    <string name="_300_example">300</string>
    <string name="_98_count_tracks_example">98 треков</string>
    <string name="playlist_photo_example">Фото плейлиста</string>
    <string name="bottom_sheet_playlistname_example">Best Songs 2021</string>
    <string name="bottom_sheet_count_example">98 треков</string>
    <string name="share_text_example">Поделиться</string>
    <string name="edit_information_text">Редактировать информацию</string>
    <string name="delete_track_text">Удалить плейлист</string>
    <string name="description_text_example">2002</string>

</resources>