<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    android:background="@color/blue">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textStyle="bold"

            android:textSize="@dimen/text_size_big_button"/>


    </FrameLayout>

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:orientation="vertical">

        <Button
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"

            android:layout_weight="@dimen/layout_weight_big_button"
            android:theme="@style/Theme.MaterialComponents"


            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/black2"
            android:textSize="@dimen/text_size_big_button"
            app:cornerRadius='@dimen/corner_radius_big_button'
            android:layout_marginTop="20dp"

            app:icon="@drawable/light_mode"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding_big_button"
            app:iconTint="@color/black2"


            />
        <Button
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_weight="@dimen/layout_weight_big_button"

            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textColor="@color/black2"
            android:textSize="@dimen/text_size_big_button"
            app:cornerRadius='@dimen/corner_radius_big_button'


            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding_big_button"
            app:iconTint="@color/black2"

            />
        <Button
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_weight="@dimen/layout_weight_big_button"

            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/black2"
            android:textSize="@dimen/text_size_big_button"
            app:cornerRadius='@dimen/corner_radius_big_button'
            app:icon="@drawable/settings"

            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding_big_button"
            app:iconTint="@color/black2"

            />



    </LinearLayout>
</LinearLayout>