<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".SettingsActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:icon="@drawable/left"
            app:iconTint="@color/black2"
            android:layout_marginTop="2dp"
            app:iconGravity="textStart"
            android:id="@+id/back_button"
            android:src="@drawable/left"
            android:contentDescription="@string/settings"
            android:foreground="?attr/selectableItemBackground"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/black2"
            android:textSize="@dimen/text_size_big_button"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Switch

            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            style="@style/Theme.PlaylistMaker"

            android:text="@string/dark_theme"
            android:textColor="@color/black2"
            android:textSize="@dimen/text_size_settings_button"
            app:iconGravity="end"
            android:paddingTop="@dimen/padding_top_settings_button"
            android:paddingBottom="@dimen/padding_bottom_settings_button"
            android:id="@+id/switch_off"
            tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            style="@style/Theme.PlaylistMaker"

            android:text="@string/share_app"
            android:textColor="@color/black2"
            android:textSize="@dimen/text_size_settings_button"
            app:icon="@drawable/share"
            app:iconGravity="end"
            app:iconTint="@color/grey"
            android:paddingTop="@dimen/padding_top_settings_button"
            android:paddingBottom="@dimen/padding_bottom_settings_button"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            style="@style/Theme.PlaylistMaker"

            android:text="@string/help_me"
            android:textColor="@color/black2"
            android:textSize="@dimen/text_size_settings_button"
            app:icon="@drawable/group"
            app:iconGravity="end"
            app:iconTint="@color/grey"
            android:paddingTop="@dimen/padding_top_settings_button"
            android:paddingBottom="@dimen/padding_bottom_settings_button"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            style="@style/Theme.PlaylistMaker"

            android:text="@string/agreement"
            android:textColor="@color/black2"
            android:textSize="@dimen/text_size_settings_button"
            app:icon="@drawable/agree"
            app:iconGravity="end"
            app:iconTint="@color/grey"
            android:paddingTop="@dimen/padding_top_settings_button"
            android:paddingBottom="@dimen/padding_bottom_settings_button"
            />
    </LinearLayout>

</LinearLayout>