<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="?attr/backgroundColor"
    android:layout_height="match_parent"
    tools:context=".media.ui.playlist.NewPlaylistFragment">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        app:tint="?attr/colorOnPrimary" />
    <TextView
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/new_playlist_text"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_size_big_button"
        android:fontFamily="@font/ys_display_medium"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:scaleType="centerCrop"
        android:id="@+id/new_playlist_photo"
        android:contentDescription="@string/new_playlist_photo"
        android:layout_height="312dp"
        android:layout_width="312dp"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="42dp"
        android:clipToOutline="true"
        android:background="@drawable/round_outline"
        android:src="@drawable/new_playlist_photo"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputNameLayout"

        app:boxStrokeWidthFocused="1dp"
        android:layout_marginHorizontal="18dp"
        android:textColorHint="?attr/colorOnPrimary"
        app:boxStrokeColor="@color/new_playlist_frame_selector"
        app:hintTextColor="@color/new_playlist_frame_selector"
        android:layout_marginTop="32dp"
        android:tag="inputNameLayout"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_photo"
        android:layout_height="56dp"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistName"
            android:textSize="@dimen/text_size_settings_button"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:defaultFocusHighlightEnabled="false"
            android:lines="1"
            android:singleLine="true"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/playlist_name" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputDescriptionLayout"
        app:boxStrokeWidthFocused="1dp"
        android:layout_marginHorizontal="18dp"
        android:textColorHint="?attr/colorOnPrimary"
        app:boxStrokeColor="@color/new_playlist_frame_selector"
        app:hintTextColor="@color/new_playlist_frame_selector"
        android:layout_marginTop="10dp"
        android:tag="inputDescriptionLayout"
        app:layout_constraintTop_toBottomOf="@id/inputNameLayout"
        android:layout_height="56dp"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistDescription"
            android:textSize="@dimen/text_size_settings_button"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:defaultFocusHighlightEnabled="false"
            android:lines="1"
            android:singleLine="true"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/playlist_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="60dp" />


    <TextView
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/bottomBorder"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:background="@drawable/button_make_playlist_selector"
        android:text="@string/create"
        android:enabled="false"/>



</androidx.constraintlayout.widget.ConstraintLayout>