<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:background="?attr/backgroundColor"
    android:layout_height="wrap_content"
    android:paddingHorizontal="30dp"
    android:paddingVertical="@dimen/padding_search"
    android:padding="@dimen/padding_search">
    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/song_image"
        android:src="@drawable/placeholder"
        app:iconTint="?attr/iconTint"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/icon_padding_big_button"
            android:text="@string/name_song"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/text_size_settings_button"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                style="@style/Text11"
                android:id="@+id/song_performer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/icon_padding_big_button"
                android:text="@string/artist"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/delimiter"
                app:iconTint="@color/grey"
                app:icon="@drawable/delimiter"
                app:iconGravity="textEnd"
                />
            <TextView
                style="@style/Text11"
                android:id="@+id/song_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
        </LinearLayout>

    </LinearLayout>

<LinearLayout
    android:layout_gravity="end|center_vertical"
    android:gravity="end"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/backgroundColor"
        android:contentDescription="@string/error"
        app:icon="@drawable/agree"
        android:src="@drawable/agree"
        app:iconTint="?attr/iconTint" />
</LinearLayout>


</LinearLayout>