<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".player.ui.AudioPlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorderSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorderSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="15dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/left"
        app:layout_constraintBottom_toTopOf="@+id/songPicture"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/topBorder"
        app:tint="?attr/colorOnPrimary" />

    <ImageView
        android:id="@+id/songPicture"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/placeholder"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toTopOf="@id/songName"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <TextView
        android:id="@+id/songName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/name_song"
        android:textSize="@dimen/text_size_big_button"
        app:layout_constraintBottom_toTopOf="@+id/songAuthor"
        app:layout_constraintEnd_toStartOf="@id/rightBorderSmall"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/songPicture" />

    <TextView
        android:id="@+id/songAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mergin_button"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/artist"
        android:textSize="@dimen/text_size_update"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlay"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/songName" />

    <ImageView
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:src="@drawable/add"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="@id/buttonPlay"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/songAuthor" />

    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/play"
        app:layout_constraintBottom_toBottomOf="@id/buttonPlay"
        app:layout_constraintBottom_toTopOf="@+id/timeNum"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/songAuthor"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/timeNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="@dimen/mergin_button"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/time"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/duration"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay" />

    <ImageView
        android:id="@+id/buttonLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/like"
        app:layout_constraintBottom_toBottomOf="@id/buttonPlay"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/songAuthor" />

    <TextView
        android:id="@+id/duration"
        style="@style/PlayerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/leftBorderSmall"
        app:layout_constraintTop_toBottomOf="@id/timeNum" />

    <TextView
        android:id="@+id/timeDuration"
        style="@style/PlayerInfoDit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mergin_button"
        android:text="@string/duration"
        app:layout_constraintBaseline_toBaselineOf="@id/duration"
        app:layout_constraintBottom_toTopOf="@+id/albumName"
        app:layout_constraintEnd_toStartOf="@id/rightBorderSmall"
        app:layout_constraintTop_toBottomOf="@id/buttonLike" />

    <TextView
        android:id="@+id/album"
        style="@style/PlayerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@+id/year"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/leftBorderSmall"
        app:layout_constraintTop_toBottomOf="@+id/duration" />

    <TextView
        android:id="@+id/albumName"
        style="@style/PlayerInfoDit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="@dimen/mergin_button"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        android:text="@string/album"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@id/album"
        app:layout_constraintBottom_toTopOf="@+id/yearNum"
        app:layout_constraintEnd_toStartOf="@id/rightBorderSmall"
        app:layout_constraintStart_toEndOf="@+id/album"
        app:layout_constraintTop_toBottomOf="@id/timeDuration" />

    <TextView
        android:id="@+id/year"
        style="@style/PlayerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@+id/genre"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/leftBorderSmall"
        app:layout_constraintTop_toBottomOf="@+id/album" />

    <TextView
        android:id="@+id/yearNum"
        style="@style/PlayerInfoDit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mergin_button"
        android:text="@string/year"
        app:layout_constraintBaseline_toBaselineOf="@id/year"
        app:layout_constraintBottom_toTopOf="@+id/genreName"
        app:layout_constraintEnd_toStartOf="@id/rightBorderSmall"
        app:layout_constraintTop_toBottomOf="@id/albumName" />

    <TextView
        android:id="@+id/genre"
        style="@style/PlayerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@+id/country"
        app:layout_constraintStart_toEndOf="@id/leftBorderSmall"
        app:layout_constraintTop_toBottomOf="@+id/year" />

    <TextView
        android:id="@+id/genreName"
        style="@style/PlayerInfoDit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mergin_button"
        android:text="@string/genre"
        app:layout_constraintBaseline_toBaselineOf="@id/genre"
        app:layout_constraintBottom_toTopOf="@+id/countryName"
        app:layout_constraintEnd_toStartOf="@id/rightBorderSmall"
        app:layout_constraintTop_toBottomOf="@id/yearNum" />

    <TextView
        android:id="@+id/country"
        style="@style/PlayerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintBottom_toTopOf="@+id/bottomBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorderSmall"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <TextView
        android:id="@+id/countryName"
        style="@style/PlayerInfoDit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintBaseline_toBaselineOf="@+id/country"
        app:layout_constraintBottom_toTopOf="@+id/bottomBorder"
        app:layout_constraintEnd_toStartOf="@id/rightBorderSmall"
        app:layout_constraintTop_toBottomOf="@+id/genreName" />
</androidx.constraintlayout.widget.ConstraintLayout>